--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
-- name: nginxがなければインストール
+# nginxがない場合、インストール
+- name: install nginx
   ansible.builtin.dnf:
     name: nginx
     state: present
   tags: nginx
 
-- name: nginx.confを配置
+# nginx.confを設置
+- name: setting nginx.conf
   ansible.builtin.template:
     src: nginx.conf.j2
     dest: /etc/nginx/nginx.conf
