--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,1 +1,7 @@
 ---
+# jdkがない場合、インストール
+- name: install jdk
+  ansible.builtin.dnf:
+    name: java-21-openjdk
+    state: present
+    update_cache: yes
